WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316230
REGRESSION: Can't use 2-Set Korean in Mail
https://bugs.webkit.org/show_bug.cgi?id=316230
Summary
REGRESSION: Can't use 2-Set Korean in Mail
Ryosuke Niwa
Reported
2026-06-03 12:50:07 PDT
Right now, typing with 2-Set Korean is broken in Mail.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2026-06-03 12:54:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66396
EWS
Comment 2
2026-06-03 18:31:26 PDT
Committed
314517@main
(c50efa2edcdd): <
https://commits.webkit.org/314517@main
> Reviewed commits have been landed. Closing PR #66396 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-06-03 18:32:12 PDT
<
rdar://problem/178677717
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug